--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
             </div>
             <nav>
            <ul>
-<li><a href="dera.html">Home</a></li>
-<li class="current"><a href="derabout.html">About</a></li>
-<li><a href="deraservices.html">Services</a></li>
+<li><a href="index.html">Home</a></li>
+<li class="current"><a href="about.html">About</a></li>
+<li><a href="services.html">Services</a></li>
                 </ul>
             </nav>
         </div>
