--- a/services.html
+++ b/services.html
@@ -14,8 +14,8 @@
             </div>
             <nav>
            <ul>
-<li><a href="dera.html">Home</a></li>
-<li><a href="derabout.html">About</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="about.html">About</a></li>
 <li class="current"><a href="services.html">Services</a></li>
                 </ul>
             </nav>
